[tool.poetry]
name = "humake_api"
version = "0.1.0"
description = "Humake FastAPI Project"
authors = ["jedaeroweb <admin@jedaeroweb.co.kr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
SQLAlchemy = ">=2.0,<3.0"
itsdangerous = ">=2.2.0"
pymysql = ">=1.1.1"
cryptography = "^44.0.2"
fastapi = ">=0.127.0"
pydantic = "^2.6"
bcrypt = "^4.0.1"
python-dotenv = "^1.1.0"
h11 = ">=0.16"
python-jose = "^3.5.0"
python-multipart = "^0.0.20"
Pillow = "^10.0.0"
starlette = ">=0.49.1"
azure-storage-blob = "^12.14.1"


[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"  # production 전용
